[gd_scene load_steps=15 format=2]

[ext_resource path="res://UI/Settings.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/TitleMenu_SettingsMouseover.png" type="Texture" id=2]
[ext_resource path="res://Sounds/Select.ogg" type="AudioStream" id=3]
[ext_resource path="res://Assets/UI/TitleMenu_Music_Click.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/TitleMenu_SettingsBase.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/TitleMenu_SettingsClick.png" type="Texture" id=6]
[ext_resource path="res://Assets/UI/UI_NinePatch.png" type="Texture" id=7]
[ext_resource path="res://Assets/UI/TitleMenu_Sound_Click.png" type="Texture" id=9]
[ext_resource path="res://Assets/UI/TitleMenu_Sound_Mouseover.png" type="Texture" id=10]
[ext_resource path="res://Assets/UI/TitleMenu_Sound_Base.png" type="Texture" id=11]
[ext_resource path="res://Assets/UI/TitleMenu_Music_Base.png" type="Texture" id=12]
[ext_resource path="res://Assets/UI/TitleMenu_Music_Mouseover.png" type="Texture" id=13]

[sub_resource type="DynamicFontData" id=1]
antialiased = false
font_path = "res://Assets/Font/pixelfont_MenuLabels.ttf"

[sub_resource type="DynamicFont" id=2]
size = 18
font_data = SubResource( 1 )

[node name="SettingsInfo" type="Control"]
pause_mode = 2
light_mask = 0
margin_bottom = 78.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingIconMargin" type="MarginContainer" parent="."]
pause_mode = 2
light_mask = 0
margin_left = -80.0
margin_top = 7.0
margin_right = -8.0
margin_bottom = 85.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton" type="TextureButton" parent="SettingIconMargin"]
pause_mode = 2
light_mask = 0
margin_right = 72.0
margin_bottom = 78.0
toggle_mode = true
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 2 )

[node name="SettingsLabelBase" type="NinePatchRect" parent="SettingIconMargin/SettingsButton"]
pause_mode = 2
light_mask = 0
margin_left = -120.0
margin_top = 80.0
margin_right = 60.0
margin_bottom = 118.0
texture = ExtResource( 7 )
region_rect = Rect2( -0.109245, -0.00251293, 72.0668, 72.1922 )
patch_margin_left = 6
patch_margin_top = 3
patch_margin_right = 6
patch_margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsLabel" type="Label" parent="SettingIconMargin/SettingsButton/SettingsLabelBase"]
pause_mode = 2
light_mask = 0
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -4.0
custom_colors/font_color = Color( 0.298039, 0.298039, 0.298039, 1 )
custom_colors/font_color_shadow = Color( 0.403922, 0.403922, 0.403922, 1 )
custom_fonts/font = SubResource( 2 )
text = "Settings (Pause)"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsMenu" type="MarginContainer" parent="."]
pause_mode = 2
light_mask = 0
margin_left = -162.0
margin_top = 126.0
margin_right = -14.0
margin_bottom = 204.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingButtons" type="HBoxContainer" parent="SettingsMenu"]
pause_mode = 2
light_mask = 0
margin_right = 148.0
margin_bottom = 78.0

[node name="ToggleSFX" type="TextureButton" parent="SettingsMenu/SettingButtons"]
pause_mode = 2
light_mask = 0
margin_right = 72.0
margin_bottom = 78.0
toggle_mode = true
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 10 )

[node name="ToggleMusic" type="TextureButton" parent="SettingsMenu/SettingButtons"]
pause_mode = 2
light_mask = 0
margin_left = 76.0
margin_right = 148.0
margin_bottom = 78.0
toggle_mode = true
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 13 )

[node name="MenuClick" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 3 )
bus = "SFX"

[connection signal="mouse_entered" from="SettingIconMargin/SettingsButton" to="." method="_on_SettingsButton_mouse_entered"]
[connection signal="mouse_exited" from="SettingIconMargin/SettingsButton" to="." method="_on_SettingsButton_mouse_exited"]
[connection signal="pressed" from="SettingIconMargin/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="SettingsMenu/SettingButtons/ToggleSFX" to="." method="_on_ToggleSFX_pressed"]
[connection signal="pressed" from="SettingsMenu/SettingButtons/ToggleMusic" to="." method="_on_ToggleMusic_pressed"]
